hard-gists/2816295/run.log
=== Docker Run Log for 2816295 ===
Started at: Mi 29. Okt 13:17:07 CET 2025

[2025-10-29 13:17:08] START: Running container for 2816295
[2025-10-29 13:17:08] SUCCESS: Container 971d50fdbe3294c3e68251b42abc9bce6b0a792678196634221526cf792357e2 started for 2816295
=== Container logs for 2816295 ===
  File "/snippet.py", line 30
    except ConnectionError, e:
           ^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2816295 ===
[2025-10-29 13:17:10] INFO: Container 971d50fdbe3294c3e68251b42abc9bce6b0a792678196634221526cf792357e2 has stopped
